objects/October_Demo__c.object
<CustomObject>
    <fields>
        <fullName>Parsons_text__c</fullName>
        <label>Parsons text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riverbed_Picklist__c</fullName>
        <description>RiverBed Demo Deployment - Oct 26</description>
        <inlineHelpText>Demo purpose</inlineHelpText>
        <label>Riverbed Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Riverbed_text__c</fullName>
        <description>RiverBed Demo Purpose Oct 26 Deployment</description>
        <label>Riverbed text</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synapse_text__c</fullName>
        <label>Synapse text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <description>For Parsons demo</description>
        <label>Test1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>October Demo</label>
    <nameField>
        <label>October Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>October Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>